[package]
name = "deploy-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atomicwrites = "0.4.4"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
sha2 = "0.10.9"
